[gd_scene load_steps=5 format=2]

[ext_resource path="res://network_menu/NetworkMenu.gd" type="Script" id=1]
[ext_resource path="res://network_menu/GamesList/refresh(white).png" type="Texture" id=2]
[ext_resource path="res://network_menu/GamesList/GamesList.gd" type="Script" id=3]
[ext_resource path="res://network_menu/JoinGameButton/JoinGameButton.tscn" type="PackedScene" id=4]

[node name="GameMenuPanel" type="Panel"]
margin_right = 492.0
margin_bottom = 396.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_right = 167.68
margin_bottom = 396.0
custom_constants/margin_left = 6

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer"]
margin_left = 6.0
margin_right = 167.68
margin_bottom = 396.0
rect_min_size = Vector2( 161.68, 338 )
size_flags_vertical = 3

[node name="UsernameLabel" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = -1.0
margin_right = 161.0
margin_bottom = 43.56
rect_min_size = Vector2( 0, 44.56 )
text = "Username"
align = 1
valign = 1

[node name="Username" type="TextEdit" parent="HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 161.0
margin_bottom = 83.0
rect_min_size = Vector2( 150, 35 )
mouse_default_cursor_shape = 0
context_menu_enabled = false

[node name="GameNamelabel" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 87.0
margin_right = 161.0
margin_bottom = 101.0
text = "Game Name"
align = 1

[node name="GameName" type="TextEdit" parent="HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 105.0
margin_right = 161.0
margin_bottom = 140.0
rect_min_size = Vector2( 150, 35 )
mouse_default_cursor_shape = 0
context_menu_enabled = false

[node name="PortLabel" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 161.0
margin_bottom = 158.0
text = "Port"
align = 1

[node name="Port" type="TextEdit" parent="HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 161.0
margin_bottom = 197.0
rect_min_size = Vector2( 150, 35 )
mouse_default_cursor_shape = 0
context_menu_enabled = false

[node name="Warning" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer"]
visible = false
margin_top = 201.0
margin_right = 161.0
margin_bottom = 215.0
size_flags_horizontal = 5
custom_colors/font_color = Color( 1, 0.372549, 0.372549, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.345098, 0.054902, 0.054902, 1 )
text = "Test Warning"
align = 1
valign = 1
autowrap = true

[node name="Host" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 201.0
margin_right = 161.0
margin_bottom = 276.0
rect_min_size = Vector2( 0, 75 )
text = "Host Game"

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 280.0
margin_right = 161.0
margin_bottom = 284.0

[node name="SinglePlayer" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 288.0
margin_right = 161.0
margin_bottom = 363.0
rect_min_size = Vector2( 161, 75 )
text = "Single Player"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_left = 171.0
margin_right = 175.0
margin_bottom = 396.0

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
margin_left = 179.0
margin_right = 488.0
margin_bottom = 396.0
rect_min_size = Vector2( 309, 329 )

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/MarginContainer2"]
margin_right = 309.0
margin_bottom = 396.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer2/VBoxContainer2"]
margin_right = 309.0
margin_bottom = 42.0
alignment = 1

[node name="ListLabel" type="Label" parent="HBoxContainer/MarginContainer2/VBoxContainer2/HBoxContainer"]
margin_left = 89.0
margin_top = -1.0
margin_right = 196.0
margin_bottom = 41.13
rect_min_size = Vector2( 0, 42.13 )
text = "Available Games"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer2/VBoxContainer2/HBoxContainer"]
margin_left = 200.0
margin_top = 11.0
margin_right = 220.0
margin_bottom = 31.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/margin_top = 0

[node name="RefreshList" type="Button" parent="HBoxContainer/MarginContainer2/VBoxContainer2/HBoxContainer/MarginContainer"]
margin_right = 20.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 20, 20 )

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/MarginContainer2/VBoxContainer2/HBoxContainer/MarginContainer/RefreshList"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_right = -2.0
margin_bottom = -2.0
rect_min_size = Vector2( 15, 15 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="GamesListContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer2/VBoxContainer2"]
margin_top = 46.0
margin_right = 309.0
margin_bottom = 396.0
size_flags_vertical = 3
script = ExtResource( 3 )
Join_Button = ExtResource( 4 )

[node name="ButtonList" type="VBoxContainer" parent="HBoxContainer/MarginContainer2/VBoxContainer2/GamesListContainer"]
margin_right = 309.0
margin_bottom = 350.0

[node name="RequestGameList" type="HTTPRequest" parent="."]
use_threads = true

[connection signal="text_changed" from="HBoxContainer/MarginContainer/VBoxContainer/Username" to="." method="_on_Username_text_changed"]
[connection signal="text_changed" from="HBoxContainer/MarginContainer/VBoxContainer/GameName" to="." method="_on_GameName_text_changed"]
[connection signal="text_changed" from="HBoxContainer/MarginContainer/VBoxContainer/Port" to="." method="_on_Port_text_changed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/SinglePlayer" to="." method="_on_Single_Player_Pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer2/VBoxContainer2/HBoxContainer/MarginContainer/RefreshList" to="." method="_on_RefreshList_pressed"]
[connection signal="request_completed" from="RequestGameList" to="." method="_on_HTTPRequest_request_completed"]
